syntax = "proto3";

package infraboard.mpaas.trigger;
option go_package = "github.com/infraboard/mpaas/apps/trigger";

// https://docs.gitlab.com/ee/user/project/integrations/webhook_events.html
enum EVENT_TYPE {
    // 推送事件
    PUSH = 0;
    // 打标事件
    TAG = 1;
    // bug事件
    ISSUE = 2;
    // 评论事件
    COMMENT = 3;
    // MR事件, 字段含义请参考: https://docs.gitlab.com/ee/api/merge_requests.html
    MERGE_REQUEST = 4;
}

message GitlabWebHookEvent {
    // 发送事件的gitlab服务地址, 比如 "https://gitlab.com"
    // @gotags: bson:"instance" json:"instance"
    string instance = 14;
    // gitlab版本, 比如 "GitLab/15.5.0-pre"
    // @gotags: bson:"user_agent" json:"user_agent"
    string user_agent = 15;
    // 事件Token, 一般固定为 服务Id
    // @gotags: json:"event_token"
    string event_token = 16;
    // 事件原始数据
    // @gotags: json:"event_raw"
    string event_raw = 17;
    // 事件类型
    // @gotags: bson:"event_type" json:"event_type"
    EVENT_TYPE event_type = 1;
    // 事件描述
    // @gotags: bson:"event_describe" json:"event_describe"
    string event_describe = 13;
    // 事件类型
    // @gotags: bson:"object_kind" json:"object_kind" validate:"required"
    string object_kind = 2;
    // 事件名称
    // @gotags: bson:"event_name" json:"event_name" validate:"required"
    string event_name = 3;
    // 关联分支
    // @gotags: bson:"ref" json:"ref,omitempty"
    string ref = 4;
    // 触发者用户ID
    // @gotags: bson:"user_id" json:"user_id,omitempty"
    int64 user_id = 5;
    // 触发者用户名称
    // @gotags: bson:"user_name" json:"user_name,omitempty"
    string user_name = 6; 
    // 用户头像
    // @gotags: bson:"user_avatar" json:"user_avatar,omitempty"
    string user_avatar = 7;
    // 项目相关信息
    // @gotags: bson:"project" json:"project,omitempty"
    Project project = 8;
    // Commit信息
    // @gotags: bson:"commits" json:"commits,omitempty"
    repeated Commit commits = 9;
    // MR是对象相关信息
    // @gotags: bson:"object_attributes" json:"object_attributes,omitempty"
    ObjectAttributes object_attributes = 10;
    // 合并请求的负责人或者责任人
    // 他们被分配了任务去审查、测试、合并和关闭这个 Merge Request。
    // 通常情况下，assignees 是一个或多个开发人员、测试人员或者代码评审人员。
    // @gotags: bson:"assignees" json:"assignees,omitempty"
    repeated User assignees = 11;
    // 代码评审人员
    // 他们被邀请来审查这个 Merge Request 中的代码变更，以确保代码质量、可读性和可维护性
    // 在 GitLab 中，创建者可以通过设置 reviewers，来邀请相应的人员来审查这个 Merge Request
    // @gotags: bson:"reviewers" json:"reviewers,omitempty"
    repeated User reviewers = 12;
}

message Project {
    // 项目id
    // @gotags: bson:"id" json:"id"
    int64 id = 1;
    // 描述
    // @gotags: bson:"description" json:"description"
    string description = 2;
    // 名称
    // @gotags: bson:"name" json:"name"
    string name = 3;
    // 项目的Web访问地址
    // @gotags: bson:"web_url" json:"web_url"
    string web_url = 7;
    // 项目的Logo地址
    // @gotags: bson:"avatar_url" json:"avatar_url"
    string avatar_url = 8;
    // ssh 地址
    // @gotags: bson:"git_ssh_url" json:"git_ssh_url"
    string git_ssh_url = 4;
    // http 地址
    // @gotags: bson:"git_http_url" json:"git_http_url"
    string git_http_url = 5;
    // namespace
    // @gotags: bson:"path_with_namespace" json:"path_with_namespace"
    string namespace_path = 6;
}

message Commit {
    // id
    // @gotags: bson:"id" json:"id"
    string id = 1;
    // commit message
    // @gotags: bson:"message" json:"message"
    string message = 2; 
    // title
    // @gotags: bson:"title" json:"title"
    string title = 3; 
    // 文本格式时间
    // @gotags: bson:"timestamp" json:"timestamp"
    string timestamp = 4;
    // commit对应的url
    // @gotags: bson:"url" json:"url"
    string url = 5; 
    // 作者
    // @gotags: bson:"author" json:"author"
    Author author = 6;  
    // 新加的文件
    // @gotags: bson:"added" json:"added"
    repeated string added = 7; 
    // 修改的文件
    // @gotags: bson:"modified" json:"modified"
    repeated string modified = 8; 
    // 删除的文件
    // @gotags: bson:"removed" json:"removed"
    repeated string removed = 9; 
}

message Author {
    // 作者名称
    // @gotags: bson:"name" json:"name"
    string name = 1;
    // 作者邮箱
    // @gotags: bson:"email" json:"email"
    string email = 2;
}

// Merge Request时相关数据
message ObjectAttributes {
    // 项目id
    // @gotags: bson:"id" json:"id"
    int64 id = 1;
    // 项目id
    // @gotags: bson:"iid" json:"iid"
    int64 iid = 2;
    // 目标项目
    // @gotags: bson:"target_project_id" json:"target_project_id"
    int64 target_project_id = 3;
    // 目标分支
    // @gotags: bson:"target_branch" json:"target_branch"
    string target_branch = 4;
    // 源项目
    // @gotags: bson:"source_project_id" json:"source_project_id"
    int64 source_project_id = 5;
    // 源分支
    // @gotags: bson:"source_branch" json:"source_branch"
    string source_branch = 6;
    // 作者
    // @gotags: bson:"author_id" json:"author_id"
    int64 author_id = 7;
    // 接收方
    // @gotags: bson:"assignee_ids" json:"assignee_ids"
    repeated int64 assignee_ids = 8;
    // 作者
    // @gotags: bson:"assignee_id" json:"assignee_id"
    int64 assignee_id = 9;
    // 接收方
    // @gotags: bson:"reviewer_ids" json:"reviewer_ids"
    repeated int64 reviewer_ids = 10;
    // 标题
    // @gotags: bson:"title" json:"title"
    string title = 11;
    // 具体描述
    // @gotags: bson:"description" json:"description"
    string description = 12;
    // 创建时间
    // @gotags: bson:"created_at" json:"created_at"
    string created_at = 13;
    // 更新时间
    // @gotags: bson:"updated_at" json:"updated_at"
    string updated_at = 14;
    // 状态: opened, closed, locked, or merged
    // 参考: https://docs.gitlab.com/ee/api/merge_requests.html#list-merge-requests
    // @gotags: bson:"state" json:"state"
    string state = 15;
    // 阻塞到解决
    // @gotags: bson:"blocking_discussions_resolved" json:"blocking_discussions_resolved"
    bool blocking_discussions_resolved = 16;
    // 解决中
    // @gotags: bson:"work_in_progress" json:"work_in_progress"
    bool work_in_progress = 17;
    // 第一次贡献
    // @gotags: bson:"first_contribution" json:"first_contribution"
    bool first_contribution = 18;
    // merge状态, blocked_status, broken_status, checking ...
    // 参考: https://docs.gitlab.com/ee/api/merge_requests.html#merge-status
    // @gotags: bson:"merge_status" json:"merge_status"
    string merge_status = 19;
    // MR URL
    // @gotags: bson:"url" json:"url"
    string url = 20;
    // 最近一次commit
    // @gotags: bson:"last_commit" json:"last_commit"
    Commit last_commit = 21;
    // 具体操作: open, update, merge ...
    // 参考: https://docs.gitlab.com/ee/user/project/integrations/webhook_events.html#merge-request-events
    // @gotags: bson:"action" json:"action"
    string action = 22;
    // 状态的详细描述
    // @gotags: bson:"detailed_merge_status" json:"detailed_merge_status"
    string detailed_merge_status = 23;
}

message User {
    // 用户Id
    // @gotags: bson:"id" json:"id"
    int64 id = 1;
    // 用户名
    // @gotags: bson:"name" json:"name"
    string name = 2;
    // username
    // @gotags: bson:"username" json:"username"
    string username = 3;
    // 头像
    // @gotags: bson:"avatar_url" json:"avatar_url"
    string avatar_url = 4;
}